--- a/composer.json
+++ b/composer.json
@@ -3,10 +3,14 @@
     "description": "Provides CQRS related services",
     "type": "library",
     "require": {
-        "symfony/messenger": "^7.3"
+        "php": "^8.4",
+        "symfony/messenger": "^7.3",
+        "symfony/uid": "^7.3",
+        "psr/log": "^3.0"
     },
     "require-dev": {
-        "pestphp/pest": "^4.1"
+        "pestphp/pest": "^4.1",
+        "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
