Commit certain JetBrains config files for devcontainer pre-config

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,34 @@
-# JetBrains IDEs
-/.idea/
+# JetBrains IDEs - Include shared configuration, exclude user-specific files
+!/.idea/php.xml
+!/.idea/webServers.xml
+!/.idea/phpunit.xml
+!/.idea/php-test-framework.xml
+!/.idea/inspectionProfiles/
+!/.idea/codeStyles/
+!/.idea/runConfigurations/
+!/.idea/sqldialects.xml
+!/.idea/vcs.xml
+!/.idea/modules.xml
+!/.idea/misc.xml
+!/.idea/encodings.xml
+# Exclude user-specific files
+/.idea/workspace.xml
+/.idea/tasks.xml
+/.idea/usage.statistics.xml
+/.idea/shelf/
+/.idea/dictionaries/
+/.idea/dataSources/
+/.idea/dataSources.ids
+/.idea/dataSources.local.xml
+/.idea/sqlDataSources.xml
+/.idea/dynamic.xml
+/.idea/uiDesigner.xml
+/.idea/gradle.xml
+/.idea/libraries/
+/.idea/jarRepositories.xml
+/.idea/compiler.xml
+/.idea/copyright/
+/.idea/httpRequests/
 
 ### Composer template
 composer.phar
