--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
 			"onAutoForward": "notify"
 		}
 	},
-	"postCreateCommand": "composer install",
+	"postCreateCommand": "mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts && composer install",
 	"remoteUser": "developer",
 	"mounts": [
 		"source=${localWorkspaceFolder}/.devcontainer/php.ini,target=/usr/local/etc/php/conf.d/99-custom.ini,type=bind"
