--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,7 @@
 		}
 	},
 	"postCreateCommand": "mkdir -p ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts && composer install",
-	"remoteUser": "developer",
+	"remoteUser": "developer",	  "workspaceFolder": "/workspace",
 	"mounts": [
 		"source=${localWorkspaceFolder}/.devcontainer/php.ini,target=/usr/local/etc/php/conf.d/99-custom.ini,type=bind"
 	],
